[package]
name = "trading-client"
description = "Wrapper for trading platform APIs with a focus on Alpaca."
version = "0.1.1"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1.0.201", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0.117"
async-trait = "0.1.80"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.5.0"
futures-util = "0.3.30"